# gh-llm

./: AGENTS.md  Makefile  README.md  pyproject.toml
skills/gh-llm/: SKILL.md
src/gh_llm/: __init__.py  __main__.py  commands.py  config.py  github.py
tests/: test_gh_llm.py
