[project]
name = "gh-llm"
version = "0.1.0"
description = "Local-first GitHub repository browsing tool for LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "platformdirs>=4.3.0",
]

[project.scripts]
gh-llm = "gh_llm.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_llm"]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    ".venv",
    "dist",
    "build",
    "__pypackages__",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "D",
    "UP",
    "B",
    "C4",
    "SIM",
    "PIE",
    "PERF",
    "PGH",
    "T10",
    "T20",
]
ignore = [
    "E501",
    "D105",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
length-sort = true
length-sort-straight = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"src/gh_llm/__main__.py" = ["T20"]
"src/gh_llm/commands.py" = ["T20", "B904"]
"tests/**" = ["D", "B"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = false

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]
